--- a/main.css
+++ b/main.css
@@ -64,7 +64,7 @@ body {
 
 ::-webkit-scrollbar {
     width: 5px;
-    margin-right: 5px;
+    margin-left: 50px;
 }
 ::-webkit-scrollbar-track {
     background-color: rgba(255, 255, 255, 0);
@@ -119,7 +119,8 @@ body {
     widows: 45px;
     height: 45px;
 }
-.friend span{
+.friend p{
+    display: inline-block;
     font-size: 14px;
     font-weight: 500;
     margin: 0 0 0 6px;
